--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -2,26 +2,26 @@
 <head>
 	<title>VASA Scheduler</title>
 	
-	<link href="/scheduling/styles/style.css" rel="stylesheet" type="text/css" />
+	<link href="/styles/style.css" rel="stylesheet" type="text/css" />
 	
 </head>
 <body>
 
 <div class="header">
-<img src="/scheduling/images/banner.png">
+<img src="/images/banner.png">
 </div>
 
 <h3 class="error">${loginerror}</h3>
 
 <div class="loginbox">
 	<h3>Welcome!</h3>
-	<form id="login" name="login" action="/scheduling/user/home" method="POST" onsubmit="return validate();">
+	<form id="login" name="login" action="/user/home" method="POST" onsubmit="return validate();">
 		<label for="username">Username</label>
 		<input id="username" type="text" name="username" style="width: 150px">
 		<label for="password">Password</label>
 		<input id="password" type="password" name="password" style="width: 150px" required>
-		<p><a href="/scheduling/user/forgotpassword">Forgot Password</a></p>
-		<p><a href="/scheduling/user/requestaccount">Request an Account</a></p>
+		<p><a href="/user/forgotpassword">Forgot Password</a></p>
+		<p><a href="/user/requestaccount">Request an Account</a></p>
 		<div class="form-actions">
 			<input id="proceed" class="btn btn-primary" type="submit" value="Submit">
 		</div>
